src/test/ui/macros/format-parse-errors.stderr
error: requires at least a format string argument
  --> $DIR/format-parse-errors.rs:2:5
   |
LL |     format!();
   |     ^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: expected expression, found keyword `struct`
  --> $DIR/format-parse-errors.rs:3:13
   |
LL |     format!(struct);
   |             ^^^^^^ expected expression

error: expected expression, found end of macro arguments
  --> $DIR/format-parse-errors.rs:4:24
   |
LL |     format!("s", name =);
   |                        ^ expected expression

error: expected `=`, found end of macro arguments
  --> $DIR/format-parse-errors.rs:5:32
   |
LL |     format!("s", foo = foo, bar);
   |                                ^ expected `=`

error: expected expression, found keyword `struct`
  --> $DIR/format-parse-errors.rs:6:24
   |
LL |     format!("s", foo = struct);
   |                        ^^^^^^ expected expression

error: expected expression, found keyword `struct`
  --> $DIR/format-parse-errors.rs:7:18
   |
LL |     format!("s", struct);
   |                  ^^^^^^ expected expression

error: format argument must be a string literal
  --> $DIR/format-parse-errors.rs:10:13
   |
LL |     format!(123);
   |             ^^^
help: you might be missing a string literal to format with
   |
LL |     format!("{}", 123);
   |             ^^^^^

error: aborting due to 7 previous errors

